# neolend-financial

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: settings.json
.github/: CODEOWNERS
.github/workflows/: ci.yml
clients/web-portal/: .env.example  Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
clients/web-portal/src/: App.tsx  index.css  mockData.ts  types.ts
docs/: BASE-GUIDE.MD  DISENO-BASES-DE-DATOS.md  FRONTEND.md  PLAN-DE-TRABAJO.md  PROPUESTA-TECNICA.md
infra/postgres/: init.sql
libs/proto/: README.md  package.json
libs/proto/schemas/: event-envelope.schema.json
libs/ts-common/: package.json
libs/ts-events/: package.json
mocks/bureau-soap-mock/: Dockerfile  package.json  server.js
mocks/wallet-mock/: Dockerfile  package.json  server.js
mocks/whatsapp-mock/: Dockerfile  package.json  server.js
services/compliance-svc/: Dockerfile  openapi.yaml  package.json
services/credit-svc/: Dockerfile  openapi.yaml  package.json  tsconfig.json
services/gateway-origination-svc/: Dockerfile  openapi.yaml  package.json  tsconfig.json
services/investor-svc/: Dockerfile  openapi.yaml  package.json
services/scoring-svc/: Dockerfile  pyproject.toml
services/scoring-svc/app/: engine.py  main.py
services/scoring-svc/app/ml/slots/blue/: .gitkeep
services/scoring-svc/app/ml/slots/green/: .gitkeep
services/servicing-svc/: Dockerfile  openapi.yaml  package.json
(+132 files in other folders)
