[project]
name = "scoring-svc"
version = "0.1.0"
description = "Servicio 2 — Motor de scoring (buró/CB + alt-data + fraude + SHAP + blue/green ML). Incisos II, VII."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "redis>=5.0.0",
    "scikit-learn>=1.4.0",
    "shap>=0.45.0",
    "numpy>=1.26.0",
    "aiokafka>=0.10.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.3.0", "pytest>=8.0.0", "httpx>=0.27.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
